--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/svg+xml" href="/public/logo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rising-up</title>
-
+<script type='text/javascript' src='//pl26371137.profitableratecpm.com/70/28/16/702816701b5061de632221a3d828de40.js'></script>
     <link class="bg-none radius-20px" href="/public/logo.webp" rel="icon" />
 
     <!-- Google Web Fonts -->
